# lightsheet_rust

./: .gitignore  Cargo.toml  README.md  build.rs  dev_build.bat  package.json  performance.md
docs/: build.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.vue  common.js  main.js  ui.js  webApi.js
frontend/src/components/: AppMenu.vue
frontend/src/lang/: locale.en.js  locale.ko.js
frontend/src/locales/: en.json  ko.json
frontend/src/plugins/: vuetify.js
public/: index.html
public/html/: index.html
res/: 1994.csv  euc_kr.csv  경기도.csv  경상남도.csv
src/: App.vue  bridge.rs  common.js  main.js  main.rs  router.js  store.js  ui.js  webApi.js
src-tauri/: Cargo.toml  resource.lib  resource.rc  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
src-tauri/src/datatable/: csv_manager.rs  csv_reader.rs  data_info.rs  data_table.rs  db_manager.rs  db_utils.rs  manager.rs  mod.rs  table_info.rs  test_csv_manager.rs  test_csv_reader.rs  test_db_utils.rs
src/assets/: plugins-gdoc-style.css
src/components/: AppDialog.vue  AppMenu.vue
src/datatable/: csv_reader.rs  data_table.rs  db_utils.rs  manager.rs  mod.rs  test_csv_reader.rs  test_db_utils.rs
src/js/: slick.remotemodel.js  util_grid.js
src/locales/: en.json  ko.json
src/plugins/: vuetify.js
src/views/: NewPage.vue  Sheet.vue  SheetTest.vue  SheetTest2.vue  SheetTest3.vue  StartPage.vue
src/widget/: FileInput.vue
tmp/: tt.db
