[package]
name = "lightsheet_rust"
version = "0.1.0"
authors = ["yiunsr <yiunsr@hanmail.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
winapi = { version = "0.3", features = [ "winuser" ] }

[dependencies]
web-view = { version = "0.6.3", features = ["edge"] }
#![windows_subsystem = "windows"]
log = "0.4"
csv = "1.1.5"
chardetng = "0.1.10"
encoding_rs = "0.8.26"
encoding_rs_io = { git = "https://github.com/yiunsr/encoding_rs_io.git" }
actix = "0.10"
actix-web = "3.3.2"
actix-web-actors = "3"
actix-rt = "1.1.1"
rust-embed = "5.1.0"
mime_guess = "2.0.1"
qstring = "0.7.2"
lazy_static = "1.4.0"

futures = "0.3"
winapi = { version = "0.3", features = [ "winuser" ] }
tinyfiledialogs = "3.3"
serde_json = "1.0"
webbrowser = "0.5.5"

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
