[package]
name = "lightsheet-rust"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Yiun Seungryong" ]
license = ""
repository = ""
default-run = "lightsheet-rust"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
tinyfiledialogs = "3.3.10"


[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "lightsheet-rust"
path = "src/main.rs"
