[package]
name = "lightsheet-rust"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Yiun Seungryong" ]
license = ""
repository = ""
default-run = "lightsheet-rust"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11.1", features = [ "all-api" ] }
log = "0.4"
csv = "1.1.5"
unicode-bom = "1.1.4"
chardetng = "0.1.10"
encoding_rs = "0.8.26"
tinyfiledialogs = "3.3.10"
lazy_static = "1.4.0"
dashmap = "4.0.2"
regex = "1.5.5"

  [dependencies.rusqlite]
  version = "0.24.2"
  features = [ "bundled" ]

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "lightsheet-rust"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
